# auto-check-rs

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
